--- a/src/index.html
+++ b/src/index.html
@@ -18,22 +18,13 @@
 <body>
 	<main id="main">
 		<canvas id="gl"></canvas>
-		<header class="frame">
-			<a class="frame__back" href="https://tympanus.net/codrops/?p=78847">Read the tutorial</a>
-			<a class="frame__archive" href="https://tympanus.net/codrops/demos/">All demos</a>
-			<a class="frame__github" href="https://github.com/JorgeCapillo/webgl-progressive-blur">GitHub</a>
-			<nav class="frame__tags">
-				<a href="https://tympanus.net/codrops/demos/?tag=scroll">#scroll</a>
-				<a href="https://tympanus.net/codrops/demos/?tag=blur">#blur</a>
-				<a href="https://tympanus.net/codrops/demos/?tag=ogl">#ogl</a>
-				<a href="https://tympanus.net/codrops/demos/?tag=webgl">#webgl</a>
-			</nav>
-		</header>
+		
 		<section id="hero">
+			<img src="/img/logo.svg" class="logo">
 			<h2>
-				<small>by Jorge Toloza</small>
-				<span>WebGL / OGL</span>
-				<strong>Progressive Blur</strong>
+				
+				<span>Salvador - Colombie - Perou </span>
+				<strong>Fast Life, Slow Coffee</strong>
 			</h2>
 			<div class="media-container">
 				<figure class="media">
