intro anim + carte

--- a/src/index.html
+++ b/src/index.html
@@ -7,15 +7,25 @@
 	<meta name="robots" content="all">
 	<title>WebGL Progressive Blur | Codrops</title>
 	<meta name="description" content="Implementation of a progressive blur effect using ogl - minimal WebGL library - with shaders.">
-	<link rel="icon" href="/fav/fav.ico" sizes="any">
-	<link rel="icon" href="/fav/fav.svg">
-	<link rel="mask-icon" href="/fav/fav-mask.svg" color="#FFFFFF">
-	<link rel="apple-touch-icon" href="/fav/apple-touch.png">
+	<link rel="shortcut icon" href="/fav/favicon.ico" type="image/x-icon" />
+	<link rel="apple-touch-icon" href="/fav/apple-touch-icon.png" />
+	<link rel="apple-touch-icon" sizes="57x57" href="/fav/apple-touch-icon-57x57.png" />
+	<link rel="apple-touch-icon" sizes="72x72" href="/fav/apple-touch-icon-72x72.png" />
+	<link rel="apple-touch-icon" sizes="76x76" href="/fav/apple-touch-icon-76x76.png" />
+	<link rel="apple-touch-icon" sizes="114x114" href="/fav/apple-touch-icon-114x114.png" />
+	<link rel="apple-touch-icon" sizes="120x120" href="/fav/apple-touch-icon-120x120.png" />
+	<link rel="apple-touch-icon" sizes="144x144" href="/fav/apple-touch-icon-144x144.png" />
+	<link rel="apple-touch-icon" sizes="152x152" href="/fav/apple-touch-icon-152x152.png" />
+	<link rel="apple-touch-icon" sizes="180x180" href="/fav/apple-touch-icon-180x180.png" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Fustat:wght@200..800&display=swap" rel="stylesheet">
 </head>
 <body>
+	<div class="intro">
+		<img src="/img/logo-white.svg" class="logo-white">
+		<img src="/img/reveal.jpg" alt="">
+	</div>
 	<main id="main">
 		<canvas id="gl"></canvas>
 		
@@ -83,25 +93,27 @@
 		</section>
 		<section id="list-section">
 			<ul>
-				<li>Santa Marta</li>
-				<li>Curramba</li>
-				<li>Spheres</li>
-				<li>Catedral</li>
-				<li>The Bird</li>
+				<li>Espresso <span>(2)</span></li>
+				<li>Double <span>(3)</span></li>
+				<li>Americano <span>(3.5)</span></li>
+				<li>Noisette <span>(3)</span></li>
+				<li>Flat White <span>(4.5)</span></li>
+				<li>Matcha Latte <span>(4.5)</span></li>
 			</ul>
 			<ul>
-				<li>Tricycle</li>
-				<li>Fashion</li>
-				<li>NINI9</li>
-				<li>Tote bags</li>
-				<li>Window</li>
+				<li>Latte <span>(4.5)</span></li>
+				<li>Cappucino <span>(4.5)</span></li>
+				<li>Mocha <span>(5)</span></li>
+				<li>Chocolat <span>(4.5)</span></li>
+				<li>Chai Latte <span>(4.5)</span></li>
+				<li>Dirty Chai <span>(5)</span></li>
 			</ul>
 			<ul>
-				<li>Monteria</li>
-				<li>Sky</li>
-				<li>Clothes</li>
-				<li>Buildings</li>
-				<li>Nature</li>
+				<li>Cookie <span>(3.5)</span></li>
+				<li>Oat Milk <span>(0.5)</span></li>
+				<li>Sirup <span>(0.5)</span></li>
+				<li>Side Car Blend <span>(10)</span></li>
+				<li>Keep Cup <span>(10)</span></li>
 			</ul>
 		</section>
 		<section id="section-3">
@@ -114,6 +126,10 @@
 		</section>
 		<section id="section-4">
 			<div class="media-container">
+				<div class="contact">
+					<a href="mailto:contact@thelastcup.fr"><strong>contact@thelastcup.fr</strong></a>
+					<a href="tel:06 66 66 34 25">(06.66.66.34.25)</a>
+				</div>
 				<figure class="media">
 					<img src="/img/9.webp" alt="bird">
 				</figure>
@@ -121,9 +137,9 @@
 			</div>
 		</section>
 		<footer id="footer">
-			<a href="https://tympanus.net/codrops/">@codrops</a>
-			<a href="https://jorgetoloza.co/">Made by Jorge Toloza</a>
-			<a href="https://instagram.com/jazanadipatocu/">Photos by @jazanadipatocu</a>
+			<a href="https://www.instagram.com/thelastcup/">@thelastcup</a>
+			<a href="https://newth.studio/">Website by @newth.studio</a>
+			<a href="https://www.instagram.com/aron_farkas_photo/">Photos by @aron_farkas</a>
 		</footer>
 	</main>
   	<script type="module" src="./js/pages/index.js"></script>
