--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,23 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=5">
 	<meta name="format-detection" content="telephone=no">
 	<meta name="robots" content="all">
-	<title>WebGL Progressive Blur | Codrops</title>
+	<title>The Last Cup | Side Car Blend</title>
+	<meta name="author" content="Newth Studio">
+	<meta name="keywords" content="The Last Cup, Coffee, Salvador, Colombia, Peru, WebGL, OGL, Progressive Blur">
+	<meta name="theme-color" content="#000000">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+	<meta name="apple-mobile-web-app-title" content="The Last Cup">
+	<meta name="application-name" content="The Last Cup">
+	<meta name="msapplication-TileColor" content="#000000">
+	<meta name="msapplication-TileImage" content="/fav/mstile-144x144.png">
+	<meta name="msapplication-config" content="/fav/browserconfig.xml">
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:site" content="@thelastcup">
+	<meta name="twitter:creator" content="@thelastcup">
+	<meta name="twitter:title" content="The Last Cup | Side Car Blend">
+	<meta name="twitter:description" content="Implementation of a progressive blur effect using ogl - minimal WebGL library - with shaders.">
+	<meta name="twitter:image" content="/img/6.webp">
 	<meta name="description" content="Implementation of a progressive blur effect using ogl - minimal WebGL library - with shaders.">
 	<link rel="shortcut icon" href="/fav/favicon.ico" type="image/x-icon" />
 	<link rel="apple-touch-icon" href="/fav/apple-touch-icon.png" />
