--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
 			<img src="/img/logo.svg" class="logo">
 			<h2>
 				
-				<span>Salvador - Colombie - Perou </span>
+				<span></span>
 				<strong>Fast Life, Slow Coffee</strong>
 			</h2>
 			<div class="media-container">
@@ -68,7 +68,7 @@
 			</div>
 			<div class="media-container">
 				<figure class="media">
-					<img src="/img/2.webp" alt="camera">
+					<img src="/img/2.webp" alt="camera" style="object-position: bottom;">
 				</figure>
 				<small>(03)</small>
 			</div>
@@ -86,6 +86,10 @@
 				</figure>
 				<small>(05)</small>
 			</div>
+			<p>
+				Un café de spécialité qui roule jusqu’à vous. <br>
+				Pour vos événements, séminaires et conventions, The Last Cup installe un véritable coffee shop mobile dans votre espace.
+			</p>
 			<div class="media-container">
 				<figure class="media">
 					<img src="/img/5.webp" alt="abuelo">
