--- a/src/index.html
+++ b/src/index.html
@@ -50,10 +50,10 @@
 			<h2>
 				
 				<span></span>
-				<strong>Fast Life, Slow Coffee</strong>
+				<strong>Fast Life, Slow Coffee.</strong>
 			</h2>
 			<div class="media-container">
-				<figure class="media">
+				<figure class="media intro-container">
 					<img src="/img/6.webp" alt="fashion">
 				</figure>
 				<small>(01)</small>
@@ -61,19 +61,19 @@
 		</section>
 		<section id="section-0">
 			<div class="media-container">
-				<figure class="media">
+				<figure class="media toslide">
 					<img src="/img/1.webp" alt="silueta">
 				</figure>
 				<small>(02)</small>
 			</div>
 			<div class="media-container">
-				<figure class="media">
+				<figure class="media toslide d1">
 					<img src="/img/2.webp" alt="camera" style="object-position: bottom;">
 				</figure>
 				<small>(03)</small>
 			</div>
 			<div class="media-container">
-				<figure class="media">
+				<figure class="media toslide d2">
 					<img src="/img/3.webp" alt="spheres">
 				</figure>
 				<small>(04)</small>
@@ -81,12 +81,12 @@
 		</section>
 		<section id="section-centered">
 			<div class="media-container">
-				<figure class="media">
+				<figure class="media toslide">
 					<img src="/img/4.webp" alt="diana">
 				</figure>
 				<small>(05)</small>
 			</div>
-			<p>
+			<p class="headline">
 				Un café de spécialité qui roule jusqu’à vous. <br>
 				Pour vos événements, séminaires et conventions, The Last Cup installe un véritable coffee shop mobile dans votre espace.
 			</p>
@@ -97,7 +97,7 @@
 				<small>(06)</small>
 			</div>
 
-			<p>
+			<p class="headline">
 				The Last Cup, c’est un barista professionnel à bord d’un sidecar café unique en France.
 					Nous proposons des prestations sur mesure pour vos événements d’entreprise :</p>	
 			</p>
@@ -132,13 +132,13 @@
 		</section>
 		<section id="section-1">
 			<div class="media-container">
-				<figure class="media">
+				<figure class="media toslide">
 					<img src="/img/0.webp" alt="tricycle">
 				</figure>
 				<small>(07)</small>
 			</div>
 			<div class="media-container">
-				<figure class="media">
+				<figure class="media toslide d1">
 					<img src="/img/7.webp" alt="building">
 				</figure>
 				<small>(08)</small>
